Style imgs, fix padding in header, alignment in Trencding

--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@
 /* Colour Palette
 White           #FFFFFF 
 Cosmic Latte    #FFF8E8
-Gold            #FFD700 / Jasmine       #FCD581
-Oxford Blue     #001F3F
-Claret          #990D35
+Gold            #FFD700 / Jasmine           #FCD581
+Oxford Blue     #001F3F / Russian Purple    #231651
+Rust            #BF3100
 */
 /* General style and selectors */
 * {
@@ -46,12 +46,18 @@ Claret          #990D35
 p {
     font-family: 'andbasr';
 }
+
+img {
+    width: 35px;
+    height: auto;
+}
 /* Header style and selectors */
 .header {
     grid-column: 2 / 3;
-    padding: 15px 30px 20px 30px;
+    padding: 1rem 2rem 2rem 3rem;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    row-gap: 2rem;
     background-color: #FFFFFF;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 10;
@@ -64,18 +70,19 @@ p {
 
 .header > div:nth-of-type(2) {
     display: flex;
-    justify-content: space-around;
+    justify-content: end;
     align-items: center;
+    column-gap: 2rem;
 }
 
 .header > div:nth-of-type(2) > img:first-of-type {
-    width: 30px;
+    width: 25px;
 }
 
 .header > div:nth-of-type(2) > img:last-of-type {
     width: 40px;
     height: auto;
-    background-color: ;
+    background-color: #cccc00;
     border-radius: 50%;
 }
 
@@ -86,6 +93,13 @@ align-self: stretch;}
     display: flex;
     align-items: center;
     column-gap: 15px;
+}
+
+.header > div:nth-of-type(3) > img {
+    width: 60px;
+    height: auto;
+    background-color: #cccc00;
+    border-radius: 50%;
 }
 
 .header > div:nth-of-type(4) {
@@ -152,16 +166,15 @@ button {
     grid-row: 1/ 3;
     display: grid;
     align-content: start;
-    
     row-gap: 1rem;
-    background-color: #990D35;
+    background-color: #BF3100;
     padding: .6rem 1rem;
 }
 
 .sidebar-card {
     display: flex;
     align-items: center;
-    padding-left: .3rem;
+    padding-left: .27rem;
 }
 
 .sidebar-card > h2 {
@@ -196,7 +209,7 @@ button {
 .main-content {
     display: grid;
     grid-template-columns: 2.5fr 1fr;
-    background-color: #FFFFFF;
+    background-color: #FFF8E8;
 }
 
 .projects {
@@ -216,7 +229,7 @@ button {
     border-left: 7px solid #FFD700;
     border-radius: 4px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.1);
-    color: #999999;
+    color: #666666;
     background-color: #FFFFFF;
 }
 
@@ -254,7 +267,7 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #999999;
+    
 }
 
 .announcements {
@@ -275,7 +288,7 @@ h4 {
     height: 360px;
     border-radius: 4px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.1);
-    color: #999999;
+    color: #666666;
     background-color: #FFFFFF;
 }
 
@@ -303,7 +316,7 @@ h4 {
     height: 360px;
     border-radius: 4px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.1);
-    color: #999999;
+    color: #666666;
     background-color: #FFFFFF;
     font-size: .9rem;
 }
@@ -311,21 +324,36 @@ h4 {
 .trending-card > div {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    column-gap: 1rem;
 }
 
-.trending-card > div > img + p {
+.trending-card > div > div > p:first-of-type {
     color: #000000;
     font-size: .9rem;
 }
+
+.trending-card > div:first-of-type > img,
+.trending-card > div:nth-of-type(2) > img,
+.trending-card > div:nth-of-type(3) > img,
+.trending-card > div:nth-of-type(4) > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.trending-card > div:first-of-type > img {
+    background-color: #00cc00;
+}
+
+.trending-card > div:nth-of-type(2) > img {
+    background-color: #ff4000
+}
+
+.trending-card > div:nth-of-type(3) > img {
+    background-color: #cccc00
+}
+
+.trending-card > div:nth-of-type(4) > img {
+    background-color: #990099
+}
 /* Images and Icons style and selectors */
-img {
-    width: 35px;
-    height: auto;
-}
-
-.icons {
-    width: 35px;
-    height: auto;
-}
-
